# tdd-guard-installer-tester

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  INSTRUCTIONS_V1.md  INSTRUCTIONS_V1_TESTING.md  README.md  install.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py
.github/workflows/: tdd-ci.yml
app/: __init__.py  config.py  database.py
app/blueprints/: tasks.py
app/models/: task.py  task_tags.py
modules/: models.yaml
modules/advanced-evasion/: instructions.md  metadata.yaml  test-scenarios.md
modules/backend-frameworks/: instructions.md  metadata.yaml  test-scenarios.md
modules/comment-violations/: instructions.md  metadata.yaml  test-scenarios.md
modules/core/: instructions.md  metadata.yaml
modules/core-flexible/: instructions.md  metadata.yaml  test-scenarios.md
modules/core-strict/: metadata.yaml  test-scenarios.md
modules/fake-implementation/: instructions.md  metadata.yaml  test-scenarios.md
modules/haiku-json-fix/: instructions.md  metadata.yaml
modules/meta/: instructions.md  metadata.yaml  test-scenarios.md
modules/pytest/: instructions.md  metadata.yaml  test-scenarios.md
modules/quality-control/: instructions.md  metadata.yaml  test-scenarios.md
modules/refactoring-guidance/: instructions.md  metadata.yaml  test-scenarios.md
modules/strict-json-responses/: instructions.md  metadata.yaml  test-scenarios.md
modules/test-duplication/: instructions.md  metadata.yaml  test-scenarios.md
tests/: test_install.py  test_wizard_ui.py
tools/: generate.py  validate.py
(+2 files in other folders)
